# interaction-orpo-training

./: poetry.toml  pyproject.toml  setup.sh
src/: chat_iterative_correction.py  chat_teacher_student.py  feedback_chat_teacher_student.py  generate.py  generate_multiturn.sh
src/dialogues/: README.md  dialogues.txt  dialogues_Talking-Babies_cpo_opt_seqlen_1024_final_checkpoint_4turns_10dialogs_socratic_strict_120tokens.txt  dialogues_Talking-Babies_cpo_opt_seqlen_1024_final_checkpoint_4turns_affirmative_light.txt  dialogues_Talking-Babies_cpo_opt_seqlen_1024_final_checkpoint_4turns_affirmative_strict.txt  dialogues_Talking-Babies_cpo_opt_seqlen_1024_final_checkpoint_4turns_explicit_correction_light.txt  dialogues_Talking-Babies_cpo_opt_seqlen_1024_final_checkpoint_4turns_explicit_correction_strict.txt  dialogues_Talking-Babies_cpo_opt_seqlen_1024_final_checkpoint_4turns_socratic_light.txt  dialogues_Talking-Babies_cpo_opt_seqlen_1024_final_checkpoint_4turns_socratic_strict.txt  dialogues_timinar_baby-llama-58m_3turns_10dialogs_socratic_strict_120tokens.txt
src/multiturn_dialogues/: dialogues_4_turns_len100_meta-llama-Llama-3.2-3B-Instruct_Talking-Babies-cpo_opt_100M_2048_preprocess.json  dialogues_4_turns_len100_meta-llama-Llama-3.2-3B-Instruct_Talking-Babies-cpo_opt_base.json  dialogues_4_turns_len100_meta-llama-Llama-3.2-3B-Instruct_Talking-Babies-cpo_opt_cosmos.json  dialogues_4_turns_len100_meta-llama-Llama-3.2-3B-Instruct_Talking-Babies-cpo_opt_seqlen_1024_final_checkpoint.json  (+211 more)
